[project]
name = "data-analysis"
description = "Data analysis custom modules for ComfyUI - Use Pandas & Matplotlib within ComfyUI"
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HowToSD/ComfyUI-Data-Analysis"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "how-to-sd"
DisplayName = "ComfyUI-Data-Analysis"
Icon = ""
