[project]
name = "data-analysis"
description = "Data analysis custom modules for ComfyUI – Integrates Pandas, Seaborn and Matplotlib into ComfyUI."
version = "3.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HowToSD/ComfyUI-Data-Analysis"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "how-to-sd"
DisplayName = "ComfyUI-Data-Analysis"
Icon = ""
